# openai-webui

./: .gitignore  README.md  flake.nix
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/views/: thread.py
backend/server/: main.py  models.py  presets.py
backend/server/views/: chats.py  threads.py
backend/tests/: test_chats_router.py  test_threads_router.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  BottonAppBar.tsx  Chat.tsx  index.css
frontend/src/components/: Loader.tsx  MyAppBar.tsx  MyDrawer.tsx
frontend/src/states/: atoms.ts
