[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-cors = "*"
peewee = "*"
requests = "*"
openai = "*"
urllib3 = "==1.26.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
