[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "server"}
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
flask-cors = "*"
peewee = "*"
requests = "*"
openai = "*"
urllib3 = "==1.26.6"
ulid = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
